got ok intrinsics, extrinsics, background extraction and a poor voxel model. Code for averaging background 90% done

--- a/VoxelReconstruction.vcxproj
+++ b/VoxelReconstruction.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="src\controllers\Glut.h" />
     <ClInclude Include="src\controllers\Reconstructor.h" />
     <ClInclude Include="src\controllers\Scene3DRenderer.h" />
+    <ClInclude Include="src\Settings.h" />
     <ClInclude Include="src\utilities\General.h" />
     <ClInclude Include="src\VoxelReconstruction.h" />
   </ItemGroup>
