--- a/VoxelReconstruction.vcxproj.filters
+++ b/VoxelReconstruction.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="src\controllers\Scene3DRenderer.h">
       <Filter>src\controllers</Filter>
     </ClInclude>
+    <ClInclude Include="src\Settings.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
