--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ data/cam4/boardcornersOld.xml
 data/cam3/boardcornersOld.xml
 data/cam2/boardcornersOld.xml
 data/cam1/boardcornersOld.xml
+data/cam2/mask.psd
